--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,10 @@ services:
       - "8088:8088"
     depends_on:
       - temporal
+  # Jaeger
+  jaeger-all-in-one:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "16686:16686"
+      - "14268:14268"
+      - "14250"
