--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -91,5 +91,5 @@
   // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": "go mod download && go mod tidy",
   // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-  "remoteUser": "vscode"
+  // "remoteUser": "vscode"
 }
