--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   # temporal
   temporal:
-    image: temporalio/auto-setup:1.13.1
+    image: temporalio/auto-setup:1.16.0
     ports:
       - "7233:7233"
     environment:
@@ -27,7 +27,7 @@ services:
 
   # temporal-admin-tools
   temporal-admin-tools:
-    image: temporalio/admin-tools:1.13.1
+    image: temporalio/admin-tools:1.16.0
     stdin_open: true
     tty: true
     environment:
@@ -37,7 +37,7 @@ services:
 
   # temporal-web
   temporal-web:
-    image: temporalio/web:1.13.0
+    image: temporalio/web:1.15.0
     environment:
       - "TEMPORAL_GRPC_ENDPOINT=temporal:7233"
       - "TEMPORAL_PERMIT_WRITE_API=true"
@@ -45,11 +45,10 @@ services:
       - "8088:8088"
     depends_on:
       - temporal
-
   # Jaeger
-  jaeger-all-in-one:
-    image: jaegertracing/all-in-one:1.24
-    ports:
-      - "16686:16686"
-      - "14268:14268"
-      - "14250"
+  # jaeger-all-in-one:
+  #   image: jaegertracing/all-in-one:1.24
+  #   ports:
+  #     - "16686:16686"
+  #     - "14268:14268"
+  #     - "14250"
